# dotfiles

./: .alias  .bashrc  .gitconfig  .inputrc  .tmux.conf  .vimrc  .vimrc.vundle  i3lock.service  install  install.conf.yaml
.config/: .gitignore_global  audio_control.sh  config.i3blocks  liquidpromptrc
.config/direnv/: direnvrc
.config/i3/: config  dmenu_search.sh
.config/ptpython/: config.py
.proto/bash/: bashrc.function
.proto/html-tailwind-pug-gulp/: gulpfile.js  package.json  start.sh
.proto/html-tailwind-pug-gulp/src/: index.pug
.proto/java-gradle/: build.gradle  start.sh
.proto/java-gradle/src/main/java/: Main.java
.proto/java-gradle/src/test/java/: MainTest.java
.proto/nix/: nix.shell
.proto/nix-k8s/: default.nix
.proto/nix-marimo/: .envrc  pyproject.toml  sample.py  shell.nix
.proto/nix-node/: .envrc  default.nix
.proto/nix-opencv/: shell.nix
.proto/nix-python/: README.md  shell.nix
.proto/nix-python/sample/: .envrc  pyproject.toml
.proto/nix-r/: default.nix
.proto/nix-rmarkdown/: .envrc  .gitinore  before.html  default.nix  gulpfile.js  index.Rmd  package.json  start.sh
.proto/nix-timeseries/: .envrc  README.md  pyproject.toml  shell.nix
.proto/terraform/ec2-spot/: main.tf
.proto/terraform/ec2-spot-arch/: README.md  init.sh  install.sh  main.tf  terraform.tfvars
.proto/terraform/ec2-spot-instance/: init.sh  main.tf
