[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["saaperezru <saaperezru@gmail.com>"]
readme = "README.md"
packages = [{include = "sample", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
